infra/apps/gitea/gitea/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: gitea
  namespace: gitea
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  host: gitea.apps.snoaxolab.axodevelopment.dev
  to:
    kind: Service
    name: gitea
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
